--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext {
+        kotlin_version = '1.3.50'
+        appcompat_version = '1.1.0-rc1'
+        lifecycle_version = '2.2.0-alpha03'
+        coroutines_version = '1.3.0'
+    }
     repositories {
         google()
         jcenter()
